--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     
     <body>
-        Testing
+        <video controls>
+            <source src="stepbrothers.mkv" type="video/mp4">
+        </video>
     </body>
 </html>
